fix z-index breaking contextMenuButton

--- a/frontend/movies-frontend/src/design/components/cards/_card--media.scss
+++ b/frontend/movies-frontend/src/design/components/cards/_card--media.scss
@@ -5,7 +5,6 @@
   // TODO: aspect ratio
   min-height: 400px;
 
-  z-index: 1;
   color: $white;
   background-color: transparent;
 
